--- a/style.css
+++ b/style.css
@@ -26,10 +26,14 @@ padding-left:100px;
  background-color: orange;
  grid-column: span 3;
  padding: 16px;
+ text-align: center;
+ font-size: 20px;
 }
  nav {
  background-color: red;
  padding: 16px;
+ text-align: center;
+ font-size:20 px;
 }
  main {
  background-color: lightgray;
@@ -38,6 +42,7 @@ padding-left:100px;
  aside {
  background-color: green;
  padding: 16px;
+ text-align: center;
 }
  footer {
  background-color: magenta;
@@ -51,4 +56,16 @@ padding-left:100px;
 	min-height: 100vh;
 	grid-template-columns: 20% auto 20%;
 	grid-template-rows: auto 1fr auto;
+}
+
+p {font-size: 24px;
+}
+
+img {
+	max-width: 90%;
+	max-height: 20%;
+	padding-left: 16px;
+}
+
+h1 {fontsize: 20px;
 }
